other-cel/restrict-ingress-wildcard/.kyverno-test/resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bading01
  labels:
    app: kuard
spec:
  rules:
  - host: '*.foo.com'
    http:
      paths:
      - backend:
          service: 
            name: kuard
            port: 
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bading02
  labels:
    app: kuard
spec:
  rules:
  - host: host1.foo.com
    http:
      paths:
      - backend:
          service: 
            name: kuard
            port: 
              number: 8080
        path: /
        pathType: ImplementationSpecific
  - host: '*.foo.com'
    http:
      paths:
      - backend:
          service: 
            name: star
            port: 
              number: 8082
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooding01
  labels:
    app: kuard
spec:
  rules:
  - host: corp.foo.com
    http:
      paths:
      - backend:
          service: 
            name: kuard
            port: 
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooding02
  labels:
    app: kuard
spec:
  rules:
  - host: corp.foo.com
    http:
      paths:
      - backend:
          service: 
            name: kuard
            port: 
              number: 8080
        path: /
        pathType: ImplementationSpecific
  - host: bar.foo.com
    http:
      paths:
      - backend:
          service: 
            name: bar
            port: 
              number: 8082
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kuard
