other-cel/restrict-ingress-wildcard/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-ingress-wildcard
policies:
- ../restrict-ingress-wildcard.yaml
resources:
- resources.yaml
results:
- kind: Ingress
  policy: restrict-ingress-wildcard
  resources:
  - bading01
  - bading02
  result: fail
  rule: block-ingress-wildcard
- kind: Ingress
  policy: restrict-ingress-wildcard
  resources:
  - gooding01
  - gooding02
  result: pass
  rule: block-ingress-wildcard
